# prism

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.zed/: settings.json
config/: prism.toml
crates/codec/: Cargo.toml
crates/codec/src/: error.rs
crates/codec/src/encode/: error.rs  mod.rs
crates/codec/src/encode/csv/: builder.rs  mod.rs
crates/cow/: Cargo.toml
crates/cow/src/: lib.rs  serde.rs
crates/ebpf-common/: Cargo.toml
crates/prism/: Cargo.toml
crates/prism-config/: Cargo.toml
crates/prism-core/: Cargo.toml
crates/prism-core/src/: lib.rs  module.rs  sender.rs
crates/prism-cpu/: Cargo.toml
crates/prism-cpu-ebpf/: Cargo.toml  rust-toolchain.toml
crates/prism-cpu-ebpf/src/: lib.rs  main.rs  perf_event.rs
crates/prism-cpu/src/: error.rs  lib.rs  stat.rs  utils.rs
crates/prism-disk/: Cargo.toml
crates/prism-disk-ebpf/: Cargo.toml
crates/prism-disk-ebpf/.cargo/: config.toml
crates/prism-disk-ebpf/src/: lib.rs  main.rs
crates/prism-disk/src/: diskstat.rs  error.rs  lib.rs
crates/prism-event/: Cargo.toml
crates/prism-event/src/: atomics.rs  lib.rs  macros.rs
crates/prism-event/src/metric/: common.rs  mod.rs  tags.rs
crates/prism-event/src/metric/value/: counter.rs  gauge.rs  mod.rs
crates/prism-macros/: Cargo.toml
crates/prism-macros/examples/: basic_usage.rs  custom_unit_test.rs  field_visibility_test.rs  native_visibility_test.rs  simple_test.rs  test_meminfo.rs  test_meta_attrs.rs  uom_test.rs  visibility_test.rs
crates/prism-macros/src/: ast.rs  attr.rs  expand.rs  lib.rs  types.rs  utils.rs
crates/prism-memory/: Cargo.toml
crates/prism-memory-ebpf/: Cargo.toml  rust-toolchain.toml
crates/prism-memory-ebpf/src/: lib.rs  main.rs
crates/prism-memory/src/: error.rs  lib.rs  meminfo.rs  vmstat.rs
crates/prism-metric/: Cargo.toml
crates/prism-metric-common/: Cargo.toml
crates/prism-metric-common/src/: lib.rs  parsers.rs
crates/prism-metric-utils/: Cargo.toml
crates/prism-metric-utils/src/: lib.rs
crates/prism-metric/src/: error.rs  lib.rs
crates/prism-metric/src/host/: constants.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
crates/prism-network/: Cargo.toml
crates/prism-network/src/: error.rs  lib.rs  netdev.rs
crates/prism-runtime/: Cargo.toml
crates/prism-runtime/src/: lib.rs
crates/prism-sender/: Cargo.toml
crates/prism-sender/src/: error.rs  lib.rs
crates/prism-sender/src/file/: mod.rs  utils.rs
crates/prism/src/: agent.rs  error.rs  lib.rs  main.rs
docs/: README.md  book.toml
docs/src/: SUMMARY.md  architecture.md  configuration.md  development.md  getting-started.md  introduction.md  testing.md
docs/src/testing/: integration-tests.md  unit-tests.md
libs/dummy/: Cargo.toml
libs/dummy/src/: lib.rs
tests/prism-fixtures/: Cargo.toml
tests/prism-fixtures/src/: lib.rs
tests/prism-fixtures/src/generators/: diskstat.rs  meminfo.rs  mod.rs  netdev.rs  stat.rs  vmstat.rs
tests/procfs-integration-tests/: Cargo.toml  README.md
tests/procfs-integration-tests/src/: main.rs  run.rs  validators.rs
tests/test-utils/: Cargo.toml
tests/test-utils/src/: convert.rs
xtask/: Cargo.toml
xtask/src/: build.rs  clippy.rs  lib.rs  main.rs  run.rs  utils.rs
