[workspace]
resolver = "2"
members = [
    "crates/*",
    "libs/*",
    "xtask",
]
exclude = [
    "crates/prism-cpu-ebpf",
    "crates/prism-memory-ebpf",
]
default-members = ["crates/prism"]

[workspace.package]
authors = ["smore.ioki@gmail.com"]
edition = "2024"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
prism-core = { path = "crates/prism-core" }
prism-event = { path = "crates/prism-event" }
prism-macros = { path = "crates/prism-macros" }
prism-runtime = { path = "crates/prism-runtime" }

# modules
prism-metric = { path = "crates/prism-metric" }
prism-sender = { path = "crates/prism-sender" }

# metrics
prism-cpu = { path = "crates/prism-cpu" }
prism-disk = { path = "crates/prism-disk" }
prism-memory = { path = "crates/prism-memory" }
prism-network = { path = "crates/prism-network" }
prism-metric-common = { path = "crates/prism-metric-common" }
prism-metric-utils = { path = "crates/prism-metric-utils" }

# utilities
codec = { path = "crates/codec" }
cow = { path = "crates/cow", features = ["serde"] }

# other crates
anyhow = { version = "1.0.98", default-features = false }
arc-swap = { version = "1.7.1", default-features = false }
bytes = { version = "1.10.1", default-features = false }
cfg-if = { version = "1.0.3", default-features = false }
clap = { version = "4.5.45", default-features = false, features = ["color", "derive", "std", "error-context"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
libc = { version = "1.0.0-alpha.1", default-features = false }
log = { version = "0.4.28", default-features = false, features = ["kv"] }
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
paste = { version = "1.0.15", default-features = false }
portable-atomic = { version = "1.11.1", default-features = false }
proc-macro2 = { version = "1.0.101" }
quote = { version = "1.0.40" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
syn = { version = "2.0.106" }
thiserror = { version = "2.0.16", default-features = false }
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
    "io-util",
    "time",
    "sync"
] }
uom = { version = "0.37.0", default-features = false, features = [
        "autoconvert", # automatic base unit conversion.
        "u64", # Unsigned integer storage types.
        "f32", "f64", # Floating point storage types.
        "si", "std", # Built-in SI system and std library support.
    ]}

[profile.dev]
split-debuginfo = "unpacked"
codegen-units = 16

# mirror configuration for crates compiled for the build platform
[profile.dev.build-override]
codegen-units = 16

[profile.dev.package]
# Build single-source-file crates with cg=1 as it helps make `cargo build` of a whole workspace a bit faster
prism-runtime = { codegen-units = 1 }

[profile.release]
opt-level = 3
debug = "limited"
lto = "thin"
codegen-units = 1

[workspace.lints.clippy]
approx_constant = "allow"
float_cmp = "allow"
match_wild_err_arm = "allow"
new_ret_no_self = "allow"
type_complexity = "allow"
unit_arg = "allow"

todo = "deny"
clone_on_ref_ptr = "deny"
trivially_copy_pass_by_ref = "deny"
# valuable to the optimizer, but may produce false positives
missing_const_for_fn = "deny"

# This is not a style lint, see https://github.com/rust-lang/rust-clippy/pull/15454
# Remove when the lint gets promoted to `suspicious`.
declare_interior_mutable_const = "deny"

redundant_clone = "deny"

[workspace.lints.rust]
async_fn_in_trait = "allow"

# unreachable_pub = "deny"
unused_extern_crates = "deny"
unused_allocation = "deny"
unused_assignments = "deny"
unused_comparisons = "deny"
# warnings = "deny"
dead_code = "allow"
