[package]
name = "xtask"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata = { version = "0.22.0", default-features = false }
clap = { workspace = true, features = ["derive", "help", "usage"] }