[package]
name = "codec"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prism-core.workspace = true

csv-core = { version = "0.1.12", default-features = false }
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true

csv = { version = "1.3.1" }