[package]
name = "cow"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
