[package]
name = "prism-cpu"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prism-macros.workspace = true
prism-metric-common.workspace = true
prism-metric-utils.workspace = true

libc.workspace = true
nom.workspace = true
paste.workspace = true
thiserror.workspace = true
uom.workspace = true
