[package]
name = "prism-runtime"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
name = "prism_runtime"
path = "src/lib.rs"

[dependencies]
num_cpus = { version = "1.17.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false, features = ["std"] }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
thread_local = { version = "1.1.9", default-features = false }
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[features]
default = []
ebpf = []