[package]
name = "prism"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "prism"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
prism-core.workspace = true
prism-event.workspace = true
prism-memory = { workspace = true, optional = true }
prism-metric.workspace = true
prism-runtime.workspace = true
prism-sender.workspace = true
codec.workspace = true

anyhow.workspace = true
arc-swap.workspace = true
clap.workspace = true
env_logger = { version = "0.11.8", default-features = false }
log = { version = "0.4.28", features = ["kv"] }
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = ["ebpf", "metric"]
ebpf = ["prism-runtime/ebpf"]
metric = ["prism-memory"]
