[package]
name = "prism-fixtures"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
prism-metric-common.workspace = true
prism-cpu.workspace = true
prism-memory.workspace = true
prism-disk.workspace = true
prism-network.workspace = true
prism-metric-utils.workspace = true

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
fake = { version = "4.4.0", default-features = false, features = ["derive"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.0"
tokio.workspace = true
uom.workspace = true

[lib]
path = "src/lib.rs"
