[package]
name = "procfs-integration-tests"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
prism-metric-common.workspace = true
prism-cpu.workspace = true
prism-memory.workspace = true
prism-disk.workspace = true
prism-network.workspace = true
prism-metric-utils.workspace = true

prism-fixtures.workspace = true
test-utils.workspace = true

anyhow.workspace = true
approx.workspace = true
chrono.workspace = true
clap.workspace = true
pretty_assertions.workspace = true
rand = "0.10.0-rc.0"
serde.workspace = true
serde_json.workspace = true
tempfile = "3.0"
tokio.workspace = true
uom.workspace = true

[[bin]]
name = "procfs_integration_tests"
path = "src/main.rs"
